[package]
name = "curlio"
version = "0.1.0"
edition = "2021"
authors = ["Kei-K23 <arkar.dev.kei@gmail.com>"]
license = "MIT"
description = "curlio is a command-line tool built in Rust that mimics the functionality of cURL. It allows you to send HTTP requests to URLs (allow basic and essential HTTP methods GET, POST, PUT, PATCH, DELETE), customize headers, send request body data (including JSON request and multipart form with file uploading), store the response data to a file, handle timeouts, and retry requests."
readme = "README.md"
homepage = "https://github.com/Kei-K23/curlio"
repository = "https://github.com/Kei-K23/curlio"
keywords = ["http-client", "api-client", "cli", "curl", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json", "multipart", "blocking", "stream"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
