[package]
name = "curlio"
version = "0.4.2"
edition = "2021"
authors = ["Kei-K23 <arkar.dev.kei@gmail.com>"]
license = "MIT"
description = "curlio is a command-line tool built in Rust that mimics the functionality of cURL. It allows you to send HTTP requests to URLs with support for various HTTP methods, custom headers, request body data (including JSON and multipart form data with file uploads), and more. The tool also includes options for verbosity, silence, response storage, file download and retry mechanisms."
readme = "README.md"
homepage = "https://github.com/Kei-K23/curlio"
repository = "https://github.com/Kei-K23/curlio"
keywords = ["http-client", "api-client", "cli", "curl", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
cookie = "0.18.1"
reqwest = { version = "0.12.7", features = ["json", "multipart", "blocking", "stream", "cookies"] }
serde_json = "1.0.128"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
